--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DetailReceiptActivity"></activity>
+        <activity android:name=".ReportActivity"></activity>
+        <activity android:name=".DetailCustomerActivity" />
+        <activity android:name=".ListCustomerActivity" />
+        <activity android:name=".DetailReceiptActivity" />
         <activity android:name=".ListReceiptActivity" />
         <activity android:name=".AddPostActivity" />
         <activity android:name=".ListPostActivity" />
