cap nhat tinh nang

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DetailReceiptActivity"></activity>
-        <activity android:name=".ListReceiptActivity" />
-        <activity android:name=".AddPostActivity" />
-        <activity android:name=".ListPostActivity" />
-        <activity android:name=".DetailProductActivity" />
-        <activity android:name=".AddProductActivity" />
-        <activity android:name=".ListProductActivity" />
+        <activity android:name=".List_Detail_Receipt.DetailReceiptActivity"></activity>
+        <activity android:name=".List_Receipt.ListReceiptActivity" />
+        <activity android:name=".List_Post.AddPostActivity" />
+        <activity android:name=".List_Post.ListPostActivity" />
+        <activity android:name=".List_Product.DetailProductActivity" />
+        <activity android:name=".List_Product.AddProductActivity" />
+        <activity android:name=".List_Product.ListProductActivity" />
         <activity android:name=".AdminActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
