--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ReportActivity"></activity>
+        <activity android:name=".AccountActivity"></activity>
+        <activity android:name=".ReportActivity" />
         <activity android:name=".DetailCustomerActivity" />
         <activity android:name=".ListCustomerActivity" />
         <activity android:name=".DetailReceiptActivity" />
