--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_background"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ListReport.QuarReportActivity"></activity>
+        <activity android:name=".ListReport.MonthReportActivity" />
+        <activity android:name=".ListReport.DailyReportActivity" />
         <activity android:name=".AccountActivity" />
-        <activity android:name=".List_Detail_Receipt.DetailReceiptActivity"></activity>
+        <activity android:name=".List_Detail_Receipt.DetailReceiptActivity" />
         <activity android:name=".List_Receipt.ListReceiptActivity" />
         <activity android:name=".List_Post.AddPostActivity" />
         <activity android:name=".List_Post.ListPostActivity" />
         <activity android:name=".List_Product.DetailProductActivity" />
         <activity android:name=".List_Product.AddProductActivity" />
         <activity android:name=".List_Product.ListProductActivity" />
-        <activity android:name=".ListReport.ReportActivity"></activity>
+        <activity android:name=".ListReport.ReportActivity" />
         <activity android:name=".ListDetailCustomer.DetailCustomerActivity" />
         <activity android:name=".ListCustomer.ListCustomerActivity" />
         <activity android:name=".AdminActivity">
