--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_background"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Infomation.AddInfoActivity"></activity>
+        <activity android:name=".Account.LoginActivity"></activity>
+        <activity android:name=".ListBook.AddBookActivity" />
+        <activity android:name=".ListBook.BookActivity" />
+        <activity android:name=".ListDetailPost.DetailPostActivity" />
+        <activity android:name=".Infomation.AddInfoActivity" />
         <activity android:name=".Infomation.InfomationActivity" />
         <activity android:name=".Banner.ListBannerActivity" />
         <activity android:name=".Banner.BannerActivity" />
