--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,5 +56,6 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.github.AnyChart:AnyChart-Android:1.1.2'
+    implementation 'me.pushy:sdk:1.0.66'
 
 }
