--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher_foreground"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_background"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".TestActivity"></activity>
+        <activity android:name=".Account.ForgotPasswordActivity" />
         <activity android:name=".Account.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,9 +39,7 @@
         <activity android:name=".ListReport.ReportActivity" />
         <activity android:name=".ListDetailCustomer.DetailCustomerActivity" />
         <activity android:name=".ListCustomer.ListCustomerActivity" />
-        <activity android:name=".AdminActivity">
-
-        </activity>
+        <activity android:name=".AdminActivity" />
     </application>
 
 </manifest>
