--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SplashActivity"></activity>
+        <activity android:name=".Drivers.AddDriverActivity"></activity>
+        <activity android:name=".Drivers.DriverActivity" />
+        <activity android:name=".SplashActivity" />
         <activity android:name=".TestActivity" />
         <activity android:name=".Account.ForgotPasswordActivity" />
         <activity android:name=".Account.LoginActivity">
